[tool.poetry]
name = "astrocolibri-tools"
version = "0.1.0"
description = ""
authors = ["Massimiliano Lincetto <m.lincetto@gmail.com>"]
readme = "README.md"
packages = [{include = "astrocolibri_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
astropy = "^5.1"
pandas = "^1.5.0"


[tool.poetry.group.interactive.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
